force-app/main/default/objects/Signing_Group__c/fields/Approve_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Approve_Group_Name__c</fullName>
    <description>The DocuSign group name</description>
    <inlineHelpText>The DocuSign group name</inlineHelpText>
    <label>Approve Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>