force-app/main/default/objects/Signing_Group__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <label>Branch Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch_Code</valueSetName>
    </valueSet>
</CustomField>