force-app/main/default/objects/Signing_Group__c/fields/Endorse_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Endorse_Group_ID__c</fullName>
    <description>The DocuSign group ID</description>
    <inlineHelpText>The DocuSign group ID</inlineHelpText>
    <label>Endorse Group ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>