force-app/main/default/objects/Signing_Group__c/fields/Endorser_Group_Signing_Order__c.field-meta.xml
<CustomField>
    <fullName>Endorser_Group_Signing_Order__c</fullName>
    <label>Endorser Group Signing Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>