force-app/main/default/objects/Signing_Group__c/fields/Number_Of_Approver__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Approver__c</fullName>
    <description>Count the number of members in approve group</description>
    <label>Number Of Approver</label>
    <summaryFilterItems>
        <field>DocuSign_Recipient__c.Signing_Role__c</field>
        <operation>equals</operation>
        <value>Approver</value>
    </summaryFilterItems>
    <summaryForeignKey>DocuSign_Recipient__c.Signing_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>