force-app/main/default/objects/Signing_Group__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <description>Unique Identifier for signing group</description>
    <inlineHelpText>Same as Role&apos;s API Name</inlineHelpText>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>