force-app/main/default/objects/Signing_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unique_Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>